# ChatBot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Langgraph_test.ipynb  README.md  TODO.txt  Untitled.ipynb  asd.py  chatbot.py  chatbot_123.py  chatbot_langgraph.py  chatbot_old_file_for_presentation_only.py  codPenal.txt  constants.py  docker-compose.yml  gradio_test.ipynb  insert_data_milvus.py  intrebari_test.py  messages_class.py  milvus_handler.py  parse_legal_text.py  parse_legal_text.txt  pyproject.toml  questions_penal_code_ro.csv  ragas.csv  ragas.json  refactoring_cod_penal.ipynb  requirements.txt  server.py  testCodPenalText.ipynb  test_chatbot.ipynb  test_intrebari_cod_penal.ipynb
.ipynb_checkpoints/: gradio_test-checkpoint.ipynb  insert_Ragas_CSV-checkpoint.ipynb  ragas-checkpoint.json  ragas_dataset_format-checkpoint.ipynb  ragas_test_dataset_evaluation-checkpoint.ipynb  refactoring_cod_penal-checkpoint.ipynb  test_cod_penal_text-checkpoint.ipynb  test_intrebari_cod_penal-checkpoint.ipynb
dataset/: refactoring_cod_penal.ipynb  test_intrebari_cod_penal.ipynb
db/: insert_data_milvus.py  refactoring_cod_penal.ipynb
test_dataset/: insert_Ragas_CSV.ipynb  ragas.csv  ragas_dataset_format.ipynb  ragas_test_dataset_evaluation.ipynb
