[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "gradio>=5.49.1",
    "jupyter>=1.1.1",
    "lab>=8.5",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "openai>=2.6.1",
    "panda>=0.3.1",
    "pydantic>=2.11.10",
    "pymilvus>=2.6.3",
]
