[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "gradio>=5.49.1",
    "jupyter>=1.1.1",
    "lab>=8.5",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.0.1",
    "langfuse>=3.9.0",
    "langgraph>=1.0.2",
    "openai>=2.6.1",
    "panda>=0.3.1",
    "pydantic>=2.11.10",
    "pymilvus>=2.6.3",
    "pyppeteer>=0.0.25",
    "uvicorn>=0.38.0",
]
